--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -81,52 +81,51 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "def extract_data():\n",
-    "    def extract_panel():\n",
-    "        # 个股K线数据\n",
-    "        df_bar = (cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg'])\n",
-    "                  .rename(columns={'pct_chg': 'share_return'}))\n",
+    "def extract_panel():\n",
+    "    # 个股K线数据\n",
+    "    df_bar = (cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg'])\n",
+    "              .rename(columns={'pct_chg': 'share_return'}))\n",
     "\n",
-    "        # 个股基本面数据\n",
-    "        df_basic = cudf.read_parquet('./DataSets/ASHARE_BASIC_PANEL.parquet', columns=['trade_date', 'ts_code', 'total_mv'])\n",
+    "    # 个股基本面数据\n",
+    "    df_basic = cudf.read_parquet('./DataSets/ASHARE_BASIC_PANEL.parquet', columns=['trade_date', 'ts_code', 'total_mv'])\n",
     "\n",
-    "        # 合并\n",
-    "        df_panel = cudf.concat([df_bar, df_basic], join=\"left\", axis=1, sort=True)\n",
+    "    # 合并\n",
+    "    df_panel = cudf.concat([df_bar, df_basic], join=\"left\", axis=1, sort=True)\n",
     "\n",
-    "        # 压缩数据\n",
-    "        df_panel.index.levels[1].astype('category', inplace=True)\n",
-    "        return df_panel\n",
-    "\n",
-    "    def extract_time_series():\n",
-    "        # 股指数据\n",
-    "        from utils.sql import DB\n",
-    "        db_loader = DB()\n",
-    "        df_share_index = (\n",
-    "            pd.read_sql_table('399300.SZ', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', 'pct_chg'])\n",
-    "            .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date')\n",
-    "            .rename(columns={'pct_chg': 'shareindex_return'}))\n",
-    "\n",
-    "        # shibor数据\n",
-    "        df_shibor = (pd.read_sql_table('SHIBOR', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', '3m'])\n",
-    "                     .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date')\n",
-    "                     .rename(columns={'3m': 'riskfree_return'})/360)\n",
-    "\n",
-    "        # 情绪数据\n",
-    "\n",
-    "        df_time = pd.concat([df_share_index, df_shibor], join=\"inner\", axis=1, sort=True)\n",
-    "        return cudf.from_pandas(df_time)\n",
-    "\n",
-    "    def extract_merge():\n",
-    "        df_panel, df_time = extract_panel(), extract_time_series()\n",
-    "        df_m = cudf.merge(left=df_panel.reset_index(), right=df_time.reset_index(),\n",
-    "                          left_on='trade_date', right_on='trade_date', how=\"left\",\n",
-    "                          sort=True)\n",
-    "        return df_m.set_index(['trade_date', 'ts_code']).sort_index(ascending=[True, True])\n",
-    "\n",
-    "    return extract_merge()\n",
+    "    # 压缩数据\n",
+    "    df_panel.index.levels[1].astype('category', inplace=True)\n",
+    "    return df_panel\n",
     "\n",
     "\n",
-    "df_panel = extract_data()"
+    "def extract_time_series():\n",
+    "    # 股指数据\n",
+    "    from utils.sql import DB\n",
+    "    db_loader = DB()\n",
+    "    df_share_index = (\n",
+    "        pd.read_sql_table('399300.SZ', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', 'pct_chg'])\n",
+    "        .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date')\n",
+    "        .rename(columns={'pct_chg': 'shareindex_return'}))\n",
+    "\n",
+    "    # shibor数据\n",
+    "    df_shibor = (pd.read_sql_table('SHIBOR', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', '3m'])\n",
+    "                 .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date')\n",
+    "                 .rename(columns={'3m': 'riskfree_return'})/360)\n",
+    "\n",
+    "    # 情绪数据\n",
+    "\n",
+    "    df_t = pd.concat([df_share_index, df_shibor], join=\"inner\", axis=1, sort=True)\n",
+    "    return cudf.from_pandas(df_t)\n",
+    "\n",
+    "\n",
+    "def extract_merge():\n",
+    "    df_p, df_t = extract_panel(), extract_time_series()\n",
+    "    df_m = cudf.merge(left=df_p.reset_index(), right=df_t.reset_index(),\n",
+    "                      left_on='trade_date', right_on='trade_date', how=\"left\",\n",
+    "                      sort=True)\n",
+    "    return df_m.set_index(['trade_date', 'ts_code']).sort_index(ascending=[True, True])\n",
+    "\n",
+    "\n",
+    "df_panel = extract_merge()"
    ],
    "metadata": {
     "collapsed": false
