--- a/analyzer/stata_use.ipynb
+++ b/analyzer/stata_use.ipynb
@@ -85,7 +85,7 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "\u001B[0;31mDocstring:\u001B[0m\n",
        "Execute one line or a block of Stata commands.\n",
        "\n",
        "When the line magic command **%stata** is used, a one-line Stata \n",
@@ -160,7 +160,7 @@
        "Line magic syntax:\n",
        "\n",
        "    %stata stata_cmd\n",
-       "\u001b[0;31mFile:\u001b[0m      /usr/local/stata17/utilities/pystata/ipython/stpymagic.py\n"
+       "\u001B[0;31mFile:\u001B[0m      /usr/local/stata17/utilities/pystata/ipython/stpymagic.py\n"
       ]
      },
      "metadata": {},
