--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -428,15 +428,15 @@
     "# 增加平方项\n",
     "def add_square_column(df, square_column: list): return pd.concat([df, df[square_column].pow(2).add_suffix('_s')], axis=1)\n",
     "\n",
+    "\n",
     "# 增加日期虚拟变量\n",
     "def add_dummy_column(df, dummy_column: str):\n",
+    "    df_weekday = pd.get_dummies(pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.weekday, prefix='weekday', drop_first=True)\n",
+    "    df_month = pd.get_dummies(pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.month, prefix='month', drop_first=True)\n",
+    "    return pd.concat([df, df_weekday, df_month], axis=1)\n",
     "\n",
-    "    df_weekday = pd.get_dummies(pd.to_datetime(df[dummy_column],format='%Y%m%d').dt.weekday, prefix='weekday',drop_first=True)\n",
-    "    df_month = pd.get_dummies(pd.to_datetime(df[dummy_column],format='%Y%m%d').dt.month, prefix='month',drop_first=True)\n",
-    "    return pd.concat([df,df_weekday, df_month], axis=1)\n",
     "\n",
-    "\n",
-    "df_series_ols=add_dummy_column(add_square_column(df_series, ['shareindex_return']), 'trade_date')\n",
+    "df_series_ols = add_dummy_column(add_square_column(df_series, ['shareindex_return']), 'trade_date')\n",
     "df_series_ols"
    ],
    "metadata": {
@@ -661,9 +661,15 @@
    ],
    "source": [
     "%%stata -d df_series_ols -force\n",
-    "ge time=_n\n",
-    "tsset time\n",
-    "var  shareindex_return img_neg shareindex_return_s, lags(1/5) exog(month_* weekday_*)"
+    "ge\n",
+    "time = _n\n",
+    "tsset\n",
+    "time\n",
+    "var\n",
+    "shareindex_return\n",
+    "img_neg\n",
+    "shareindex_return_s, lags(1/5)\n",
+    "exog(month_*weekday_*)"
    ],
    "metadata": {
     "collapsed": false
