--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 673 ms, sys: 171 ms, total: 844 ms\n",
-      "Wall time: 1.24 s\n"
+      "CPU times: user 862 µs, sys: 0 ns, total: 862 µs\n",
+      "Wall time: 484 µs\n"
      ]
     }
    ],
@@ -83,8 +83,8 @@
     "\n",
     "def extract_panel():\n",
     "    # 个股K线数据\n",
-    "    df_bar = (cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg'])\n",
-    "              .rename(columns={'pct_chg': 'share_return'}))\n",
+    "    df_bar = (cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg']).rename(\n",
+    "        columns={'pct_chg': 'share_return'}))\n",
     "\n",
     "    # 个股基本面数据\n",
     "    df_basic = cudf.read_parquet('./DataSets/ASHARE_BASIC_PANEL.parquet', columns=['trade_date', 'ts_code', 'total_mv'])\n",
@@ -101,32 +101,27 @@
     "    # 股指数据\n",
     "    from utils.sql import DB\n",
     "    db_loader = DB()\n",
-    "    df_share_index = (\n",
-    "        pd.read_sql_table('399300.SZ', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', 'pct_chg'])\n",
-    "        .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date')\n",
-    "        .rename(columns={'pct_chg': 'shareindex_return'}))\n",
+    "    df_share_index = (pd.read_sql_table('399300.SZ', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', 'pct_chg']).astype(\n",
+    "        dtype={'trade_date': 'uint32'}).set_index('trade_date').rename(columns={'pct_chg': 'shareindex_return'}))\n",
     "\n",
     "    # shibor数据\n",
-    "    df_shibor = (pd.read_sql_table('SHIBOR', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', '3m'])\n",
-    "                 .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date')\n",
-    "                 .rename(columns={'3m': 'riskfree_return'})/360)\n",
+    "    df_shibor = (pd.read_sql_table('SHIBOR', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', '3m']).astype(\n",
+    "        dtype={'trade_date': 'uint32'}).set_index('trade_date').rename(columns={'3m': 'riskfree_return'})/360)\n",
     "\n",
     "    # 情绪数据\n",
-    "    df_sent = pd.concat([pd.read_sql_table('IMG_SENT', db_loader.ENGINE, 'SENT_DAILY').astype(dtype={'trade_date': 'uint32'})\n",
-    "                        .set_index('trade_date').rename(columns={'neg_index': 'img_neg'}),\n",
-    "                         pd.read_sql_table('TEX_SENT', db_loader.ENGINE, 'SENT_DAILY').astype(dtype={'trade_date': 'uint32'})\n",
-    "                        .set_index('trade_date').rename(columns={'neg_index': 'tex_neg'})], axis=1)\n",
-    "    return (\n",
-    "        cudf.from_pandas(pd.concat([df_share_index, df_shibor], join=\"inner\", axis=1, sort=True)),\n",
-    "        pd.concat([df_sent, df_share_index, df_shibor], join=\"inner\", axis=1, sort=True))\n",
+    "    df_sent = pd.concat([pd.read_sql_table('IMG_SENT', db_loader.ENGINE, 'SENT_DAILY').astype(dtype={'trade_date': 'uint32'}).set_index(\n",
+    "        'trade_date').rename(columns={'neg_index': 'img_neg'}),\n",
+    "                         pd.read_sql_table('TEX_SENT', db_loader.ENGINE, 'SENT_DAILY').astype(dtype={'trade_date': 'uint32'}).set_index(\n",
+    "                             'trade_date').rename(columns={'neg_index': 'tex_neg'})], axis=1)\n",
+    "\n",
+    "    return (cudf.from_pandas(pd.concat([df_share_index, df_shibor], join=\"inner\", axis=1, sort=True)),\n",
+    "            pd.concat([df_sent, df_share_index, df_shibor], join=\"inner\", axis=1, sort=True))\n",
     "\n",
     "\n",
     "def extract_merge():\n",
     "    df_p = extract_panel()\n",
     "    df_t, _ = extract_time_series()\n",
-    "    df_m = cudf.merge(left=df_p.reset_index(), right=df_t.reset_index(),\n",
-    "                      left_on='trade_date', right_on='trade_date', how=\"left\",\n",
-    "                      sort=True)\n",
+    "    df_m = cudf.merge(left=df_p.reset_index(), right=df_t.reset_index(), left_on='trade_date', right_on='trade_date', how=\"left\", sort=True)\n",
     "    return df_m.set_index(['trade_date', 'ts_code']).sort_index(ascending=[True, True])\n",
     "\n",
     "\n",
@@ -236,8 +231,8 @@
     "\n",
     "    # 多线程加速\n",
     "    pandarallel.initialize(progress_bar=True)\n",
-    "    df_out = (df_panel.groupby(level=['ts_code'])[['share_return', 'total_mv', 'Y', 'CONST', 'X']]\n",
-    "              .parallel_apply(lambda x: roll_idvol(x, 5, 30)).droplevel(2))\n",
+    "    df_out = (df_panel.groupby(level=['ts_code'])[['share_return', 'total_mv', 'Y', 'CONST', 'X']].parallel_apply(\n",
+    "        lambda x: roll_idvol(x, 5, 30)).droplevel(2))\n",
     "    # 保存\n",
     "    df_out.to_parquet('./DataSets/ASHARE_OLS_PANEL.parquet', engine='pyarrow', index=True)\n",
     "\n",
@@ -326,8 +321,7 @@
     "df_ols_panel = df_ols_panel.reset_index().set_index(['trade_date', 'idvol_group', 'ts_code']).sort_index()\n",
     "\n",
     "# 求组中市值加权系数,并求回报\n",
-    "df_ols_panel['mv_ratio'] = (df_ols_panel['total_mv']/df_ols_panel\n",
-    "                            .groupby(level=['trade_date', 'idvol_group'])['total_mv'].transform('sum'))\n",
+    "df_ols_panel['mv_ratio'] = (df_ols_panel['total_mv']/df_ols_panel.groupby(level=['trade_date', 'idvol_group'])['total_mv'].transform('sum'))\n",
     "# 求组中回报\n",
     "df_ols_panel['idvol_vw_ratio'] = df_ols_panel['mv_ratio']*df_ols_panel['share_return']\n",
     "df_ols_panel['idvol_group_return'] = (df_ols_panel.groupby(level=['trade_date', 'idvol_group'])['idvol_vw_ratio'].transform('sum'))\n",
@@ -357,8 +351,7 @@
     "df_ols_panel = df_ols_panel[['idvol_group_return']].to_pandas().droplevel('ts_code')\n",
     "df_ols_panel = df_ols_panel[~df_ols_panel.index.duplicated(keep='last')]\n",
     "# 转为时间序列数据\n",
-    "df_series = (df_ols_panel.reset_index()\n",
-    "             .pivot(index='trade_date', columns='idvol_group', values='idvol_group_return'))\n",
+    "df_series = (df_ols_panel.reset_index().pivot(index='trade_date', columns='idvol_group', values='idvol_group_return'))\n",
     "# 合并其他时间序列数据\n",
     "df_series = df_series.join(df_time_series, how='inner').dropna(axis=0).reset_index()\n",
     "df_series"
@@ -393,6 +386,7 @@
     "import sys\n",
     "\n",
     "sys.path.append('/usr/local/stata17/utilities')\n",
+    "# noinspection PyUnresolvedReferences\n",
     "from pystata import config\n",
     "\n",
     "config.init('mp')"
@@ -660,16 +654,15 @@
     }
    ],
    "source": [
+    "from statsmodels.tsa.ardl.tests.test_ardl import lags\n",
     "%%stata -d df_series_ols -force\n",
-    "ge\n",
-    "time = _n\n",
-    "tsset\n",
-    "time\n",
-    "var\n",
-    "shareindex_return\n",
-    "img_neg\n",
-    "shareindex_return_s, lags(1/5)\n",
-    "exog(month_*weekday_*)"
+    "# @formatter:off\n",
+    "# noqa\n",
+    "ge time = _n  # noqa\n",
+    "tsset time # noqa\n",
+    "var shareindex_return img_neg shareindex_return_s, lags(1/5) # noqa\n",
+    "exog(month_*weekday_*) # noqa\n",
+    "# @formatter:on"
    ],
    "metadata": {
     "collapsed": false
@@ -689,11 +682,11 @@
    "execution_count": 14,
    "outputs": [],
    "source": [
-    "def cal_return(df, MA):\n",
-    "    df[f'img_neg_m{MA}'] = (df['img_neg'].rolling(MA).mean())\n",
+    "def cal_return(df, ma):\n",
+    "    df[f'img_neg_m{ma}'] = (df['img_neg'].rolling(ma).mean())\n",
     "\n",
     "    # 历史均值\n",
-    "    df['sell_signal'] = (df['img_neg'] >= df[f'img_neg_m{MA}'])\n",
+    "    df['sell_signal'] = (df['img_neg'] >= df[f'img_neg_m{ma}'])\n",
     "    df['sell_signal'] = df['sell_signal'].shift(1)\n",
     "\n",
     "    # 高于均值投资\n",
@@ -708,7 +701,7 @@
     "    df['mv_shareindex'] = df['mv_shareindex'].cumprod(axis=0)\n",
     "    df['mv_img'] = df['mv_img'].cumprod(axis=0)\n",
     "\n",
-    "    return df.rename(columns={'mv_img': f'mv_img_{MA}'})\n",
+    "    return df.rename(columns={'mv_img': f'mv_img_{ma}'})\n",
     "\n",
     "\n",
     "def start():\n",
