--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -83,8 +83,11 @@
     "\n",
     "def extract_panel():\n",
     "    # 个股K线数据\n",
-    "    df_bar = (cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg']).rename(\n",
-    "        columns={'pct_chg': 'share_return'}))\n",
+    "    df_bar = (\n",
+    "        cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg']).rename(\n",
+    "            columns={\n",
+    "                'pct_chg': 'share_return'}\n",
+    "        ))\n",
     "\n",
     "    # 个股基本面数据\n",
     "    df_basic = cudf.read_parquet('./DataSets/ASHARE_BASIC_PANEL.parquet', columns=['trade_date', 'ts_code', 'total_mv'])\n",
@@ -101,18 +104,25 @@
     "    # 股指数据\n",
     "    from utils.sql import DB\n",
     "    db_loader = DB()\n",
-    "    df_share_index = (pd.read_sql_table('399300.SZ', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', 'pct_chg']).astype(\n",
-    "        dtype={'trade_date': 'uint32'}).set_index('trade_date').rename(columns={'pct_chg': 'shareindex_return'}))\n",
+    "    df_share_index = (\n",
+    "        pd.read_sql_table('399300.SZ', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', 'pct_chg'])\n",
+    "        .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date').rename(columns={'pct_chg': 'shareindex_return'})\n",
+    "    )\n",
     "\n",
     "    # shibor数据\n",
-    "    df_shibor = (pd.read_sql_table('SHIBOR', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', '3m']).astype(\n",
-    "        dtype={'trade_date': 'uint32'}).set_index('trade_date').rename(columns={'3m': 'riskfree_return'})/360)\n",
+    "    df_shibor = (\n",
+    "            pd.read_sql_table('SHIBOR', db_loader.ENGINE, 'FIN_DAILY_INDEX', columns=['trade_date', '3m'])\n",
+    "            .astype(dtype={'trade_date': 'uint32'}).set_index('trade_date').rename(columns={'3m': 'riskfree_return'})/360\n",
+    "    )\n",
     "\n",
     "    # 情绪数据\n",
-    "    df_sent = pd.concat([pd.read_sql_table('IMG_SENT', db_loader.ENGINE, 'SENT_DAILY').astype(dtype={'trade_date': 'uint32'}).set_index(\n",
-    "        'trade_date').rename(columns={'neg_index': 'img_neg'}),\n",
-    "                         pd.read_sql_table('TEX_SENT', db_loader.ENGINE, 'SENT_DAILY').astype(dtype={'trade_date': 'uint32'}).set_index(\n",
-    "                             'trade_date').rename(columns={'neg_index': 'tex_neg'})], axis=1)\n",
+    "    df_sent = pd.concat(\n",
+    "        [pd.read_sql_table('IMG_SENT', db_loader.ENGINE, 'SENT_DAILY').astype(dtype={'trade_date': 'uint32'})\n",
+    "         .set_index('trade_date').rename(columns={'neg_index': 'img_neg'}),\n",
+    "         pd.read_sql_table('TEX_SENT', db_loader.ENGINE, 'SENT_DAILY').astype(dtype={'trade_date': 'uint32'})\n",
+    "         .set_index('trade_date').rename(columns={'neg_index': 'tex_neg'})\n",
+    "         ], axis=1\n",
+    "    )\n",
     "\n",
     "    return (cudf.from_pandas(pd.concat([df_share_index, df_shibor], join=\"inner\", axis=1, sort=True)),\n",
     "            pd.concat([df_sent, df_share_index, df_shibor], join=\"inner\", axis=1, sort=True))\n",
@@ -121,7 +131,9 @@
     "def extract_merge():\n",
     "    df_p = extract_panel()\n",
     "    df_t, _ = extract_time_series()\n",
-    "    df_m = cudf.merge(left=df_p.reset_index(), right=df_t.reset_index(), left_on='trade_date', right_on='trade_date', how=\"left\", sort=True)\n",
+    "    df_m = cudf.merge(\n",
+    "        left=df_p.reset_index(), right=df_t.reset_index(), left_on='trade_date', right_on='trade_date', how=\"left\", sort=True\n",
+    "    )\n",
     "    return df_m.set_index(['trade_date', 'ts_code']).sort_index(ascending=[True, True])\n",
     "\n",
     "\n",
@@ -231,8 +243,10 @@
     "\n",
     "    # 多线程加速\n",
     "    pandarallel.initialize(progress_bar=True)\n",
-    "    df_out = (df_panel.groupby(level=['ts_code'])[['share_return', 'total_mv', 'Y', 'CONST', 'X']].parallel_apply(\n",
-    "        lambda x: roll_idvol(x, 5, 30)).droplevel(2))\n",
+    "    df_out = (\n",
+    "        df_panel.groupby(level=['ts_code'])[['share_return', 'total_mv', 'Y', 'CONST', 'X']]\n",
+    "        .parallel_apply(lambda x: roll_idvol(x, 5, 30)).droplevel(2)\n",
+    "    )\n",
     "    # 保存\n",
     "    df_out.to_parquet('./DataSets/ASHARE_OLS_PANEL.parquet', engine='pyarrow', index=True)\n",
     "\n",
@@ -321,7 +335,9 @@
     "df_ols_panel = df_ols_panel.reset_index().set_index(['trade_date', 'idvol_group', 'ts_code']).sort_index()\n",
     "\n",
     "# 求组中市值加权系数,并求回报\n",
-    "df_ols_panel['mv_ratio'] = (df_ols_panel['total_mv']/df_ols_panel.groupby(level=['trade_date', 'idvol_group'])['total_mv'].transform('sum'))\n",
+    "df_ols_panel['mv_ratio'] = (\n",
+    "            df_ols_panel['total_mv']/df_ols_panel.groupby(level=['trade_date', 'idvol_group'])['total_mv'].transfor('sum'))\n",
+    "\n",
     "# 求组中回报\n",
     "df_ols_panel['idvol_vw_ratio'] = df_ols_panel['mv_ratio']*df_ols_panel['share_return']\n",
     "df_ols_panel['idvol_group_return'] = (df_ols_panel.groupby(level=['trade_date', 'idvol_group'])['idvol_vw_ratio'].transform('sum'))\n",
@@ -420,13 +436,22 @@
    ],
    "source": [
     "# 增加平方项\n",
-    "def add_square_column(df, square_column: list): return pd.concat([df, df[square_column].pow(2).add_suffix('_s')], axis=1)\n",
+    "def add_square_column(df, square_column: list): return pd.concat(\n",
+    "    [df, df[square_column].pow(2).add_suffix('_s')],\n",
+    "    axis=1\n",
+    ")\n",
     "\n",
     "\n",
     "# 增加日期虚拟变量\n",
     "def add_dummy_column(df, dummy_column: str):\n",
-    "    df_weekday = pd.get_dummies(pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.weekday, prefix='weekday', drop_first=True)\n",
-    "    df_month = pd.get_dummies(pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.month, prefix='month', drop_first=True)\n",
+    "    df_weekday = pd.get_dummies(\n",
+    "        pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.weekday, prefix='weekday',\n",
+    "        drop_first=True\n",
+    "    )\n",
+    "    df_month = pd.get_dummies(\n",
+    "        pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.month, prefix='month',\n",
+    "        drop_first=True\n",
+    "    )\n",
     "    return pd.concat([df, df_weekday, df_month], axis=1)\n",
     "\n",
     "\n",
@@ -658,10 +683,15 @@
     "%%stata -d df_series_ols -force\n",
     "# @formatter:off\n",
     "# noqa\n",
-    "ge time = _n  # noqa\n",
-    "tsset time # noqa\n",
-    "var shareindex_return img_neg shareindex_return_s, lags(1/5) # noqa\n",
-    "exog(month_*weekday_*) # noqa\n",
+    "ge\n",
+    "time = _n  # noqa\n",
+    "tsset\n",
+    "time  # noqa\n",
+    "var\n",
+    "shareindex_return\n",
+    "img_neg\n",
+    "shareindex_return_s, lags(1/5)  # noqa\n",
+    "exog(month_*weekday_*)  # noqa\n",
     "# @formatter:on"
    ],
    "metadata": {
