--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -84,10 +84,9 @@
     "def extract_panel():\n",
     "    # 个股K线数据\n",
     "    df_bar = (\n",
-    "        cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg']).rename(\n",
-    "            columns={\n",
-    "                'pct_chg': 'share_return'}\n",
-    "        ))\n",
+    "        cudf.read_parquet('./DataSets/ASHARE_BAR_PANEL.parquet', columns=['trade_date', 'ts_code', 'pct_chg'])\n",
+    "        .rename(columns={'pct_chg': 'share_return'})\n",
+    "    )\n",
     "\n",
     "    # 个股基本面数据\n",
     "    df_basic = cudf.read_parquet('./DataSets/ASHARE_BASIC_PANEL.parquet', columns=['trade_date', 'ts_code', 'total_mv'])\n",
@@ -336,7 +335,7 @@
     "\n",
     "# 求组中市值加权系数,并求回报\n",
     "df_ols_panel['mv_ratio'] = (\n",
-    "            df_ols_panel['total_mv']/df_ols_panel.groupby(level=['trade_date', 'idvol_group'])['total_mv'].transfor('sum'))\n",
+    "        df_ols_panel['total_mv']/df_ols_panel.groupby(level=['trade_date', 'idvol_group'])['total_mv'].transfor('sum'))\n",
     "\n",
     "# 求组中回报\n",
     "df_ols_panel['idvol_vw_ratio'] = df_ols_panel['mv_ratio']*df_ols_panel['share_return']\n",
@@ -402,7 +401,6 @@
     "import sys\n",
     "\n",
     "sys.path.append('/usr/local/stata17/utilities')\n",
-    "# noinspection PyUnresolvedReferences\n",
     "from pystata import config\n",
     "\n",
     "config.init('mp')"
@@ -436,22 +434,13 @@
    ],
    "source": [
     "# 增加平方项\n",
-    "def add_square_column(df, square_column: list): return pd.concat(\n",
-    "    [df, df[square_column].pow(2).add_suffix('_s')],\n",
-    "    axis=1\n",
-    ")\n",
+    "def add_square_column(df, square_column: list): return pd.concat([df, df[square_column].pow(2).add_suffix('_s')], axis=1)\n",
     "\n",
     "\n",
     "# 增加日期虚拟变量\n",
     "def add_dummy_column(df, dummy_column: str):\n",
-    "    df_weekday = pd.get_dummies(\n",
-    "        pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.weekday, prefix='weekday',\n",
-    "        drop_first=True\n",
-    "    )\n",
-    "    df_month = pd.get_dummies(\n",
-    "        pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.month, prefix='month',\n",
-    "        drop_first=True\n",
-    "    )\n",
+    "    df_weekday = pd.get_dummies(pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.weekday, prefix='weekday', drop_first=True)\n",
+    "    df_month = pd.get_dummies(pd.to_datetime(df[dummy_column], format='%Y%m%d').dt.month, prefix='month', drop_first=True)\n",
     "    return pd.concat([df, df_weekday, df_month], axis=1)\n",
     "\n",
     "\n",
@@ -679,19 +668,12 @@
     }
    ],
    "source": [
-    "from statsmodels.tsa.ardl.tests.test_ardl import lags\n",
     "%%stata -d df_series_ols -force\n",
     "# @formatter:off\n",
     "# noqa\n",
-    "ge\n",
-    "time = _n  # noqa\n",
-    "tsset\n",
-    "time  # noqa\n",
-    "var\n",
-    "shareindex_return\n",
-    "img_neg\n",
-    "shareindex_return_s, lags(1/5)  # noqa\n",
-    "exog(month_*weekday_*)  # noqa\n",
+    "ge time = _n  # noqa\n",
+    "tsset time  # noqa\n",
+    "var shareindex_return img_neg shareindex_return_s, lags(1/5) exog(month_*weekday_*)  # noqa\n",
     "# @formatter:on"
    ],
    "metadata": {
