--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -454,7 +454,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 3.2回归结果"
+    "### 3.2 回归结果"
    ],
    "metadata": {
     "collapsed": false
@@ -670,10 +670,9 @@
    "source": [
     "%%stata -d df_series_ols -force\n",
     "# @formatter:off\n",
-    "# noqa\n",
-    "ge time = _n  # noqa\n",
-    "tsset time  # noqa\n",
-    "var shareindex_return img_neg shareindex_return_s, lags(1/5) exog(month_*weekday_*)  # noqa\n",
+    "ge time = _n\n",
+    "tsset time\n",
+    "var shareindex_return img_neg shareindex_return_s, lags(1/5) exog(month_*weekday_*)\n",
     "# @formatter:on"
    ],
    "metadata": {
