--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -216,9 +216,10 @@
     "    \"\"\"\n",
     "    滚动OLS回归求异质波动率\n",
     "    \"\"\"\n",
+    "\n",
     "    try:\n",
     "        # 估计参数\n",
-    "        model_ols = RollingOLS(endog=df_code[['Y']], exog=df_code[['CONST', 'X']], window=ols_window, )\n",
+    "        model_ols = RollingOLS(endog=df_code[['Y']], exog=df_code[['CONST', 'X']], window=ols_window)\n",
     "        df_para = model_ols.fit().params.rename(columns={'CONST': 'Alpha', 'X': 'Beta'})\n",
     "\n",
     "        # 预测残差 已经对齐了\n",
