--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -19,6 +19,24 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import cudf\n",
+    "import pandas as pd\n",
+    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment',)\n",
+    "sys.path.append('/usr/local/stata17/utilities')\n",
+    "from pystata import config"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### 1.1 加载面板数据"
@@ -42,15 +60,6 @@
    ],
    "source": [
     "%%time\n",
-    "import sys\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import cudf\n",
-    "import pandas as pd\n",
-    "\n",
-    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
-    "\n",
-    "\n",
     "def load_data():\n",
     "    # 数据集:个股K线面板数据,个股基本面数据\n",
     "    data_list = ['ASHARE_BAR_PANEL.parquet', 'ASHARE_BASIC_PANEL.parquet']\n",
@@ -193,6 +202,13 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "outputs": [
@@ -208,7 +224,6 @@
    "source": [
     "%%time\n",
     "from statsmodels.regression.rolling import RollingOLS\n",
-    "# 多线程分组计算\n",
     "from pandarallel import pandarallel\n",
     "\n",
     "\n",
@@ -292,10 +307,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import cudf\n",
-    "\n",
     "QUANTILE = 0.5\n",
     "df_ols_panel = cudf.read_parquet('./DataSets/ASHARE_OLS_PANEL.parquet').reset_index().set_index(['trade_date', 'ts_code']).sort_index()\n",
     "df_ols_panel"
@@ -400,11 +411,6 @@
    "execution_count": 56,
    "outputs": [],
    "source": [
-    "import sys\n",
-    "\n",
-    "sys.path.append('/usr/local/stata17/utilities')\n",
-    "from pystata import config\n",
-    "\n",
     "config.init('mp')"
    ],
    "metadata": {
