--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -28,9 +28,11 @@
     "import numpy as np\n",
     "import cudf\n",
     "import pandas as pd\n",
-    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment',)\n",
+    "sys.path.append('/home/ubuntu/notebook/Investor-Sentiment')\n",
     "sys.path.append('/usr/local/stata17/utilities')\n",
-    "from pystata import config"
+    "from pystata import config #Stata\n",
+    "from statsmodels.regression.rolling import RollingOLS #滚动回归\n",
+    "from pandarallel import pandarallel #多线程Apply"
    ],
    "metadata": {
     "collapsed": false
@@ -98,10 +100,12 @@
     "    )\n",
     "\n",
     "    # 个股基本面数据\n",
+    "\n",
     "    df_basic = cudf.read_parquet('./DataSets/ASHARE_BASIC_PANEL.parquet', columns=['trade_date', 'ts_code', 'total_mv'])\n",
     "\n",
     "    # 合并\n",
     "    df_p = cudf.concat([df_bar, df_basic], join=\"left\", axis=1, sort=True)\n",
+    "\n",
     "\n",
     "    # 压缩数据\n",
     "    df_p.index.levels[1].astype('category', inplace=True)\n",
@@ -223,8 +227,7 @@
    ],
    "source": [
     "%%time\n",
-    "from statsmodels.regression.rolling import RollingOLS\n",
-    "from pandarallel import pandarallel\n",
+    "\n",
     "\n",
     "\n",
     "def roll_idvol(df_code: pd.DataFrame, ols_window: int, var_ma: int) -> pd.DataFrame:\n",
