--- a/analyzer/analyzer.ipynb
+++ b/analyzer/analyzer.ipynb
@@ -504,8 +504,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "outputs": [],
+   "execution_count": 174,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      ". est clear\n",
+      "\n",
+      ". est\n",
+      "\n",
+      "-------------------------------------------------------------------------------\n",
+      "active results\n",
+      "-------------------------------------------------------------------------------\n",
+      "\n",
+      "Vector autoregression\n",
+      "\n",
+      "Sample: 6 thru 2031                             Number of obs     =      2,026\n",
+      "Log likelihood =  -10304.18                     AIC               =   10.26375\n",
+      "FPE            =   5.755333                     HQIC              =   10.35831\n",
+      "Det(Sigma_ml)  =   5.250447                     SBIC              =   10.52144\n",
+      "\n",
+      "Equation           Parms      RMSE     R-sq      chi2     P>chi2\n",
+      "----------------------------------------------------------------\n",
+      "HIGH                 31     2.01293   0.0248   51.48999   0.0086\n",
+      "img_neg              31     .141304   0.0382   80.49245   0.0000\n",
+      "HIGH_s               31     8.51408   0.3097   908.8987   0.0000\n",
+      "----------------------------------------------------------------\n",
+      "\n",
+      "------------------------------------------------------------------------------\n",
+      "             | Coefficient  Std. err.      z    P>|z|     [95% conf. interval]\n",
+      "-------------+----------------------------------------------------------------\n",
+      "HIGH         |\n",
+      "        HIGH |\n",
+      "         L1. |   .1115138   .0229372     4.86   0.000     .0665577      .15647\n",
+      "         L2. |  -.0023639   .0230442    -0.10   0.918    -.0475297     .042802\n",
+      "         L3. |   .0053367   .0232953     0.23   0.819    -.0403212    .0509946\n",
+      "         L4. |   .0238375   .0231726     1.03   0.304    -.0215799    .0692549\n",
+      "         L5. |   .0001259   .0228114     0.01   0.996    -.0445836    .0448354\n",
+      "             |\n",
+      "     img_neg |\n",
+      "         L1. |  -.7994989   .3163658    -2.53   0.011    -1.419564   -.1794334\n",
+      "         L2. |   .2043313   .3179331     0.64   0.520     -.418806    .8274687\n",
+      "         L3. |   -.052996   .3165683    -0.17   0.867    -.6734585    .5674664\n",
+      "         L4. |   .0405071   .3165542     0.13   0.898    -.5799277    .6609419\n",
+      "         L5. |  -.4682962   .3154621    -1.48   0.138    -1.086591    .1499981\n",
+      "             |\n",
+      "      HIGH_s |\n",
+      "         L1. |   .0126228   .0053588     2.36   0.018     .0021197    .0231259\n",
+      "         L2. |  -.0014161   .0053334    -0.27   0.791    -.0118693    .0090371\n",
+      "         L3. |  -.0040489   .0053609    -0.76   0.450     -.014556    .0064582\n",
+      "         L4. |   .0029967   .0052751     0.57   0.570    -.0073424    .0133358\n",
+      "         L5. |  -.0068563   .0052758    -1.30   0.194    -.0171968    .0034842\n",
+      "             |\n",
+      "     month_2 |   .5164851   .2380013     2.17   0.030     .0500111    .9829591\n",
+      "     month_3 |   .3634809   .2136627     1.70   0.089    -.0552903    .7822521\n",
+      "     month_4 |   .3044434   .2186143     1.39   0.164    -.1240328    .7329196\n",
+      "     month_5 |   .4102025   .2191911     1.87   0.061    -.0194043    .8398092\n",
+      "     month_6 |   .3098067    .218138     1.42   0.156     -.117736    .7373494\n",
+      "     month_7 |   .3151976   .2198774     1.43   0.152    -.1157543    .7461494\n",
+      "     month_8 |   .2694161   .2195597     1.23   0.220     -.160913    .6997453\n",
+      "     month_9 |   .2774471    .223559     1.24   0.215    -.1607204    .7156146\n",
+      "    month_10 |   .3983467    .234502     1.70   0.089    -.0612688    .8579622\n",
+      "    month_11 |   .3931169   .2217031     1.77   0.076    -.0414131    .8276469\n",
+      "    month_12 |   .3849035    .219743     1.75   0.080    -.0457848    .8155918\n",
+      "   weekday_1 |   .0223194   .1429315     0.16   0.876    -.2578213      .30246\n",
+      "   weekday_2 |  -.1478032   .1432768    -1.03   0.302    -.4286206    .1330142\n",
+      "   weekday_3 |  -.2594468   .1438347    -1.80   0.071    -.5413577     .022464\n",
+      "   weekday_4 |  -.1949641    .143729    -1.36   0.175    -.4766677    .0867394\n",
+      "       _cons |   .1267423   .2257698     0.56   0.575    -.3157585     .569243\n",
+      "-------------+----------------------------------------------------------------\n",
+      "img_neg      |\n",
+      "        HIGH |\n",
+      "         L1. |    .000906   .0016102     0.56   0.574    -.0022499    .0040618\n",
+      "         L2. |   .0011723   .0016177     0.72   0.469    -.0019982    .0043429\n",
+      "         L3. |   .0011435   .0016353     0.70   0.484    -.0020616    .0043486\n",
+      "         L4. |  -.0003418   .0016267    -0.21   0.834      -.00353    .0028464\n",
+      "         L5. |   .0012611   .0016013     0.79   0.431    -.0018774    .0043997\n",
+      "             |\n",
+      "     img_neg |\n",
+      "         L1. |   .0855272   .0222083     3.85   0.000     .0419998    .1290546\n",
+      "         L2. |   .0438411   .0223183     1.96   0.049      .000098    .0875841\n",
+      "         L3. |   .0994718   .0222225     4.48   0.000     .0559165    .1430271\n",
+      "         L4. |  -.0027923   .0222215    -0.13   0.900    -.0463456     .040761\n",
+      "         L5. |   .0331164   .0221448     1.50   0.135    -.0102867    .0765195\n",
+      "             |\n",
+      "      HIGH_s |\n",
+      "         L1. |  -.0009592   .0003762    -2.55   0.011    -.0016965   -.0002219\n",
+      "         L2. |  -.0003209   .0003744    -0.86   0.391    -.0010547    .0004129\n",
+      "         L3. |    .000453   .0003763     1.20   0.229    -.0002846    .0011906\n",
+      "         L4. |  -.0001021   .0003703    -0.28   0.783    -.0008279    .0006237\n",
+      "         L5. |   .0001632   .0003704     0.44   0.660    -.0005627     .000889\n",
+      "             |\n",
+      "     month_2 |  -.0107006   .0167072    -0.64   0.522    -.0434462     .022045\n",
+      "     month_3 |  -.0110416   .0149987    -0.74   0.462    -.0404385    .0183554\n",
+      "     month_4 |  -.0020441   .0153463    -0.13   0.894    -.0321223    .0280342\n",
+      "     month_5 |   .0085316   .0153868     0.55   0.579     -.021626    .0386891\n",
+      "     month_6 |   -.008817   .0153129    -0.58   0.565    -.0388297    .0211957\n",
+      "     month_7 |   .0059742    .015435     0.39   0.699    -.0242778    .0362262\n",
+      "     month_8 |   .0110351   .0154127     0.72   0.474    -.0191732    .0412433\n",
+      "     month_9 |   -.003197   .0156934    -0.20   0.839    -.0339555    .0275615\n",
+      "    month_10 |   .0060457   .0164616     0.37   0.713    -.0262184    .0383098\n",
+      "    month_11 |  -.0097262   .0155631    -0.62   0.532    -.0402294     .020777\n",
+      "    month_12 |   .0011345   .0154255     0.07   0.941     -.029099     .031368\n",
+      "   weekday_1 |   .0033335   .0100335     0.33   0.740    -.0163319    .0229988\n",
+      "   weekday_2 |  -.0025402   .0100578    -0.25   0.801     -.022253    .0171726\n",
+      "   weekday_3 |   -.008649   .0100969    -0.86   0.392    -.0284386    .0111406\n",
+      "   weekday_4 |  -.0170493   .0100895    -1.69   0.091    -.0368244    .0027257\n",
+      "       _cons |    .158344   .0158486     9.99   0.000     .1272813    .1894067\n",
+      "-------------+----------------------------------------------------------------\n",
+      "HIGH_s       |\n",
+      "        HIGH |\n",
+      "         L1. |   -.411066   .0970177    -4.24   0.000    -.6012171   -.2209148\n",
+      "         L2. |   -.619691   .0974702    -6.36   0.000    -.8107291   -.4286529\n",
+      "         L3. |  -.1005477   .0985321    -1.02   0.308     -.293667    .0925717\n",
+      "         L4. |  -.2399691    .098013    -2.45   0.014    -.4320711   -.0478671\n",
+      "         L5. |   .0516853   .0964854     0.54   0.592    -.1374227    .2407932\n",
+      "             |\n",
+      "     img_neg |\n",
+      "         L1. |  -.0976733   1.338133    -0.07   0.942    -2.720366    2.525019\n",
+      "         L2. |   .8101368   1.344762     0.60   0.547    -1.825549    3.445822\n",
+      "         L3. |  -.8083062    1.33899    -0.60   0.546    -3.432677    1.816065\n",
+      "         L4. |  -2.291717    1.33893    -1.71   0.087    -4.915971    .3325376\n",
+      "         L5. |   .8178125   1.334311     0.61   0.540    -1.797388    3.433013\n",
+      "             |\n",
+      "      HIGH_s |\n",
+      "         L1. |   .1134776   .0226662     5.01   0.000     .0690526    .1579026\n",
+      "         L2. |   .1566302   .0225586     6.94   0.000     .1124163    .2008442\n",
+      "         L3. |   .1157764   .0226749     5.11   0.000     .0713344    .1602183\n",
+      "         L4. |   .1491073   .0223123     6.68   0.000      .105376    .1928386\n",
+      "         L5. |    .158936   .0223153     7.12   0.000     .1151989    .2026732\n",
+      "             |\n",
+      "     month_2 |   .2841955   1.006675     0.28   0.778     -1.68885    2.257242\n",
+      "     month_3 |  -.9566164   .9037295    -1.06   0.290    -2.727894    .8146609\n",
+      "     month_4 |  -.8455182   .9246734    -0.91   0.361    -2.657845    .9668085\n",
+      "     month_5 |  -.4956044   .9271132    -0.53   0.593    -2.312713    1.321504\n",
+      "     month_6 |  -.1310166   .9226589    -0.14   0.887    -1.939395    1.677362\n",
+      "     month_7 |   .2119408    .930016     0.23   0.820    -1.610857    2.034739\n",
+      "     month_8 |  -.1566104   .9286721    -0.17   0.866    -1.976774    1.663554\n",
+      "     month_9 |  -.8595473   .9455878    -0.91   0.363    -2.712865    .9937706\n",
+      "    month_10 |  -.6479989   .9918737    -0.65   0.514    -2.592036    1.296038\n",
+      "    month_11 |  -.8450966   .9377379    -0.90   0.367    -2.683029    .9928359\n",
+      "    month_12 |  -1.178038   .9294473    -1.27   0.205    -2.999722    .6436449\n",
+      "   weekday_1 |   -1.93714   .6045578    -3.20   0.001    -3.122052   -.7522287\n",
+      "   weekday_2 |   -2.69429   .6060181    -4.45   0.000    -3.882064   -1.506516\n",
+      "   weekday_3 |  -1.995952   .6083779    -3.28   0.001     -3.18835    -.803553\n",
+      "   weekday_4 |   -2.23091   .6079306    -3.67   0.000    -3.422432   -1.039388\n",
+      "       _cons |   4.053861   .9549391     4.25   0.000     2.182215    5.925507\n",
+      "------------------------------------------------------------------------------\n",
+      "\n",
+      ". \n"
+     ]
+    }
+   ],
    "source": [
     "%%stata\n",
     "est clear\n",
@@ -1578,6 +1730,7 @@
    ],
    "source": [
     "%%stata -d df_series_ols -force\n",
+    "\n",
     "\n",
     "//描述性统计\n",
     "//cd Outputs\n",
